--- a/src/popup.html
+++ b/src/popup.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/reset.min.css">
 	<link rel="stylesheet" href="css/popup.css">
+	<script src="js/popup.js"></script>
 </head>
 <body>
 	<div id="container">
-		<div class="menu-entry">R.I.P. Current Tab</div>
-		<div class="menu-entry">R.I.P. All Tabs</div>
+		<div id="RIPTab" class="menu-entry">R.I.P. Current Tab</div>
+		<div id="RIPAllTab" class="menu-entry">R.I.P. All Tabs</div>
 	</div>
 
-	<script src="js/popup.js"></script>
 </body>
 </html>
