Some work on background.js
I can now start working on the bulk which is closing tabs, storing them,
opening them back up, listing them etc.

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div id="container">
-		<div id="RIPTab" class="menu-entry">R.I.P. Current Tab</div>
-		<div id="RIPAllTab" class="menu-entry">R.I.P. All Tabs</div>
+		<div id="riptab" class="menu-entry">R.I.P. Current Tab</div>
+		<div id="ripalltab" class="menu-entry">R.I.P. All Tabs</div>
 	</div>
 
 </body>
