Some chrome.storage stuff, gettin started

--- a/src/popup.html
+++ b/src/popup.html
@@ -10,7 +10,7 @@
 	<div id="container">
 		<div id="riptab" class="menu-entry">R.I.P. Current Tab</div>
 		<div id="ripalltab" class="menu-entry">R.I.P. All Tabs</div>
+		<div id="listtabs" class="menu-entry">List Tab Groups</div>
 	</div>
-
 </body>
 </html>
