Fruitless attempt at getting tabGroups

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tab Groups - Tabs Should Rest</title>
+	<title>Tabs Should Rest</title>
 	<link rel="stylesheet" href="css/reset.min.css">
 	<link rel="stylesheet" href="css/tab-groups.css">
+	<script src="js/HTML.min.js"></script>
 	<script src="js/tab-groups.js"></script>
 </head>
 <body>
