No popup.html now, going to clone OneTab first
And of course other stuff got deleted as well.

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Tabs Should Rest</title>
 	<link rel="stylesheet" href="css/reset.min.css">
-	<link rel="stylesheet" href="css/tab-groups.css">
+	<link rel="stylesheet" href="css/tabsshouldrest.css">
 	<script src="js/HTML.min.js"></script>
-	<script src="js/tab-groups.js"></script>
+	<script src="js/tabsshouldrest.js"></script>
 </head>
 <body>
 	<div id="container">
