Gonna start using popup again, seems the best way

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Tabs Should Rest</title>
-	<link rel="stylesheet" href="css/reset.min.css">
-	<link rel="stylesheet" href="css/tabsshouldrest.css">
+  <meta charset="UTF-8">
+  <title>Tabs Should Rest</title>
+  <!-- <link rel="stylesheet" href="css/reset.min.css"> -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/tabsshouldrest.css">
 </head>
 <body>
-	<div id="container">
-		<div id="groups">
-		</div>
+  <div id="container">
+    <header>
+      <h1>Tabs Should Rest</h1>
+    </header>
+	<div id="groups">
 	</div>
-	<script src="js/HTML.min.js"></script>
-	<script src="js/tabsshouldrest.js"></script>
+  </div>
+  <script src="js/HTML.min.js"></script>
+  <script src="js/tabsshouldrest.js"></script>
 </body>
 </html>
