Initial useable version, still very crude
This version has all the basics in.  The interface for accessing the tab
groups and manipulating them would be the next big step.

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
-<html>
-  
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/reset.min.css">
+	<link rel="stylesheet" href="css/popup.css">
+</head>
+<body>
+	<div id="container">
+		<div id="menu" class="grid-container">
+			<div class="row">
+				<div id="rip-this" class="menu-entry col-1-2">RIP this</div>
+				<div id="rip-all" class="menu-entry col-1-2">RIP all</div>
+			</div>
+			<div class="row">
+				<div id="open-background-page" class="menu-entry">Open RIPd tabs</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="js/popup.js"></script>
+</body>
 </html>
