--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -16,6 +16,7 @@
 	</div>
   </div>
   <script src="js/HTML.min.js"></script>
+  <script src="js/ui.js"></script>
   <script src="js/tabsshouldrest.js"></script>
 </body>
 </html>
