Using Bower for JS files now

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/reset.min.css">
 	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 	<link rel="stylesheet" href="css/tabsshouldrest.css">
+	<script src="js/tabsshouldrest.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -15,8 +16,8 @@
 		<div id="groups">
 		</div>
 	</div>
-	<script src="js/HTML.min.js"></script>
+	<script src="bower_components/HTML/dist/HTML.min.js"></script>
+	<script src="bower_components/mithriljs/archive/v0.1.22/mithril.min.js"></script>
 	<script src="js/ui.js"></script>
-	<script src="js/tabsshouldrest.js"></script>
 </body>
 </html>
