Going to start working on MVC interface (Mithril)

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="css/reset.min.css">
 	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
 	<link rel="stylesheet" href="css/tabsshouldrest.css">
-	<script src="js/tabsshouldrest.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -18,6 +17,8 @@
 	</div>
 	<script src="bower_components/HTML/dist/HTML.min.js"></script>
 	<script src="bower_components/mithriljs/archive/v0.1.22/mithril.min.js"></script>
+	<script src="bower_components/jsSHA/src/sha256.js"></script>
+	<script src="js/tabsshouldrest.js"></script>
 	<script src="js/ui.js"></script>
 </body>
 </html>
