Moved tons of files, coming back from Imgblock

--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/reset.min.css">
-	<link rel="stylesheet" href="css/popup.css">
+	<link rel="stylesheet" href="assets/reset.min.css">
+	<link rel="stylesheet" href="popup.css">
+	<script src="assets/prefixfree.min.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -18,6 +19,6 @@
 		</div>
 	</div>
 
-	<script src="js/popup.js"></script>
+	<script src="popup.js"></script>
 </body>
 </html>
