--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tabs Should Rest</title>
-	<link rel="stylesheet" href="css/reset.min.css">
-	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
-	<link rel="stylesheet" href="css/tabsshouldrest.css">
+	<link rel="stylesheet" href="assets/reset.min.css">
+	<link rel="stylesheet" href="tabsshouldrest.css">
+	<script src="assets/prefixfree.min.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -15,10 +15,8 @@
 		<div id="groups">
 		</div>
 	</div>
-	<script src="bower_components/HTML/dist/HTML.min.js"></script>
-	<script src="bower_components/mithriljs/archive/v0.1.22/mithril.min.js"></script>
-	<script src="bower_components/jsSHA/src/sha256.js"></script>
-	<script src="js/tabsshouldrest.js"></script>
-	<script src="js/ui.js"></script>
+	<script src="assets/mithril.min.js"></script>
+	<script src="tabsshouldrest.js"></script>
+	<script src="tabsshouldrest-ui.js"></script>
 </body>
 </html>
