Got nice general styles for tabsshouldrest.html

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -15,6 +15,9 @@
 		</header>
 		<div id="groups">
 		</div>
+		<footer role="contentinfo">
+			The source code for Tabs Should Rest is available at <a href="https://github.com/Greduan/chrome-ext-tabs-should-rest">GitHub</a>.
+		</footer>
 	</div>
 
 	<script src="assets/mithril.min.js"></script>
