Group date and amount displayed now

--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -21,6 +21,7 @@
 	</div>
 
 	<script src="assets/mithril.min.js"></script>
+	<script src="assets/moment.min.js"></script>
 	<script src="tabsshouldrest-ui.js"></script>
 </body>
 </html>
