--- a/tabsshouldrest.html
+++ b/tabsshouldrest.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="container">
 		<header>
-			<h1>Tabs Should Rest</h1>
+			<h1>Tabs Should Rest <span style="font-size: .3em;">v0.3.0-alpha</span></h1>
 		</header>
 		<div id="groups">
 		</div>
