--- a/tabulator.html
+++ b/tabulator.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tabs Should Rest</title>
+	<title>Tabulator</title>
 	<link rel="stylesheet" href="assets/reset.min.css">
-	<link rel="stylesheet" href="tabsshouldrest.css">
+	<link rel="stylesheet" href="tabulator.css">
 	<script src="assets/prefixfree.min.js"></script>
-	<script src="tabsshouldrest.js"></script>
+	<script src="tabulator.js"></script>
 </head>
 <body>
 	<div id="container">
 		<header>
-			<h1>Tabs Should Rest <span style="font-size: .3em;">v0.3.0-alpha</span></h1>
+			<h1>Tabulator <span style="font-size: .3em;">v0.3.0-alpha</span></h1>
 		</header>
 		<div id="groups">
 		</div>
 		<footer role="contentinfo">
-			The source code for Tabs Should Rest is available at <a href="https://github.com/Greduan/chrome-ext-tabs-should-rest">GitHub</a>.
+			The source code for Tabulator is available at <a href="https://github.com/Greduan/chrome-ext-tabs-should-rest">GitHub</a>.
 		</footer>
 	</div>
 
 	<script src="assets/mithril.min.js"></script>
 	<script src="assets/moment.min.js"></script>
-	<script src="tabsshouldrest-ui.js"></script>
+	<script src="tabulator.js"></script>
 </body>
 </html>
