Finish name change and bit of refactoring

--- a/popup.html
+++ b/popup.html
@@ -10,11 +10,10 @@
 	<div id="container">
 		<div id="menu" class="grid-container">
 			<div class="row">
-				<div id="rip-this" class="menu-entry col-1-2">RIP this</div>
-				<div id="rip-all" class="menu-entry col-1-2">RIP all</div>
+				<div id="save-all" class="menu-entry">Save all</div>
 			</div>
 			<div class="row">
-				<div id="open-background-page" class="menu-entry">Open RIPd tabs</div>
+				<div id="open-background-page" class="menu-entry">Open saved tabs</div>
 			</div>
 		</div>
 	</div>
