--- a/tabulator.html
+++ b/tabulator.html
@@ -16,12 +16,12 @@
 		<div id="groups">
 		</div>
 		<footer role="contentinfo">
-			The source code for Tabulator is available at <a href="https://github.com/Greduan/chrome-ext-tabs-should-rest">GitHub</a>.
+			The source code for Tabulator is available at <a href="https://github.com/Greduan/chrome-ext-tabulator">GitHub</a>.
 		</footer>
 	</div>
 
 	<script src="assets/mithril.min.js"></script>
 	<script src="assets/moment.min.js"></script>
-	<script src="tabulator.js"></script>
+	<script src="tabulator-ui.js"></script>
 </body>
 </html>
