Can now save settings, uses defaults otherwise
And also some styles for saving stuff.

--- a/options.html
+++ b/options.html
@@ -20,9 +20,11 @@
 				</div>
 				<div class="choices">
 					<p><label for="deleteTabOnOpen"><input type="radio" name="deleteTabOnOpen" value="yes"> Delete opened links from tab groups</label></p>
-					<p><label for="deleteTabOnOpen"><input type="radio" name="deleteTabOnOpen" value="no" checked> Leave the links alone</label></p>
+					<p><label for="deleteTabOnOpen"><input type="radio" name="deleteTabOnOpen" value="no"> Leave the links alone</label></p>
 				</div>
 			</div>
+			<button name="save">Save options</button>
+			<div id="saved">Options saved.</div>
 		</div>
 
 		<footer role="contentinfo">
@@ -30,6 +32,7 @@
 		</footer>
 	</div>
 
+	<script src="assets/jquery.min.js"></script>
 	<script src="options.js"></script>
 </body>
 </html>
