--- a/options.html
+++ b/options.html
@@ -16,7 +16,7 @@
 		<div id="options">
 			<div class="option">
 				<div class="desc">
-					<p>On clicking 'restore all' or restoring a single tab:</p>
+					<p>On clicking "Restore group" or restoring a single tab:</p>
 				</div>
 				<div class="choices">
 					<p><label for="deleteTabOnOpen"><input type="radio" name="deleteTabOnOpen" value="yes"> Delete opened links from tab groups</label></p>
