Option: Close Pinned tabs

--- a/options.html
+++ b/options.html
@@ -23,6 +23,15 @@
 					<p><label for="deleteTabOnOpen"><input type="radio" name="deleteTabOnOpen" value="no"> Leave the links alone</label></p>
 				</div>
 			</div>
+			<div class="option">
+				<div class="desc">
+					<p>Close pinned tabs:</p>
+				</div>
+				<div class="choices">
+					<p><label for="closePinnedTabs"><input type="radio" name="closePinnedTabs" value="yes"> Close pinned tabs too</label></p>
+					<p><label for="closePinnedTabs"><input type="radio" name="closePinnedTabs" value="no"> Leave them open</label></p>
+				</div>
+			</div>
 			<button name="save">Save options</button>
 			<div id="saved">Options saved.</div>
 		</div>
