Small UI/UX/wording tweaks

--- a/popup.html
+++ b/popup.html
@@ -10,10 +10,10 @@
 	<div id="container">
 		<div id="menu" class="grid-container">
 			<div class="row">
-				<div id="save-all" class="menu-entry">Save all</div>
+				<div id="save-all" class="menu-entry">Save tabs</div>
 			</div>
 			<div class="row">
-				<div id="open-background-page" class="menu-entry">Open saved tabs</div>
+				<div id="open-background-page" class="menu-entry">Dashboard</div>
 			</div>
 		</div>
 	</div>
