--- a/tabulator.html
+++ b/tabulator.html
@@ -2,21 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tabulator</title>
+	<title>Tabulator · Dashboard</title>
 	<link rel="stylesheet" href="assets/reset.min.css">
+	<link rel="stylesheet" href="base.css">
 	<link rel="stylesheet" href="tabulator.css">
 	<script src="assets/prefixfree.min.js"></script>
 	<script src="tabulator.js"></script>
 </head>
 <body>
 	<div id="container">
+
 		<header>
-			<h1>Tabulator <span style="font-size: .3em;">v0.7.0-alpha</span></h1>
+			<h1>Tabulator <small>Dashboard</small></h1>
 		</header>
-		<div id="groups">
-		</div>
+
+		<div id="groups"><!-- --></div>
+
 		<footer role="contentinfo">
-			The source code for Tabulator is available at <a href="https://github.com/Greduan/chrome-ext-tabulator">GitHub</a>.
+			<p><small>
+				<a href="/options.html">Options</a>
+			</small></p>
 		</footer>
 	</div>
 
