Logo + Icon set

--- a/tabulator.html
+++ b/tabulator.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="tabulator.css">
 	<script src="assets/prefixfree.min.js"></script>
 	<script src="tabulator.js"></script>
+	<link rel="shortcut icon" href="images/icon16.png">
 </head>
 <body>
 	<div id="container">
