--- a/options.html
+++ b/options.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="base.css">
 	<link rel="stylesheet" href="options.css">
 	<script src="assets/prefixfree.min.js"></script>
+	<link rel="shortcut icon" href="images/icon16.png">
 </head>
 <body>
 	<div id="container">
