--- a/options.html
+++ b/options.html
@@ -41,7 +41,7 @@
 		<footer role="contentinfo">
 			<p><small>
 				<a href="/tabulator.html">Dashboard</a> &nbsp;&nbsp;&nbsp;
-				<a href="https://github.com/Greduan/chrome-ext-tabulator">Source</a>
+				<a href="https://github.com/luckyshot/chrome-ext-tabulator" target="_blank">Source</a>
 			</small></p>
 		</footer>
 	</div>
