[design] Alerts styling

--- a/options.html
+++ b/options.html
@@ -31,11 +31,11 @@
 				</div>
 				<div class="choices">
 					<p><label for="closePinnedTabs"><input type="radio" name="closePinnedTabs" value="yes"> Close pinned tabs too</label></p>
-					<p><label for="closePinnedTabs"><input type="radio" name="closePinnedTabs" value="no"> Leave pinned tabs open</label></p>
+					<p><label for="closePinnedTabs"><input type="radio" name="closePinnedTabs" value="no"> Keep pinned tabs open</label></p>
 				</div>
 			</div>
 			<button name="save" class="button button-wide">Save options</button>
-			<div id="saved">Options saved.</div>
+			<div id="saved" class="alert alert-success">Options saved</div>
 		</div>
 
 		<footer role="contentinfo">
