Small design/UI tweaks

--- a/tabulator.html
+++ b/tabulator.html
@@ -26,6 +26,8 @@
 		</footer>
 	</div>
 
+	<img class="logo-background" src="images/icon128.png" alt="Tabulator icon">
+
 	<script src="assets/mithril.min.js"></script>
 	<script src="assets/moment.min.js"></script>
 	<script src="tabulator-ui.js"></script>
