--- a/options.html
+++ b/options.html
@@ -46,6 +46,8 @@
 		</footer>
 	</div>
 
+	<img class="logo-background" src="images/icon128.png" alt="Tabulator icon">
+
 	<script src="assets/jquery.min.js"></script>
 	<script src="options.js"></script>
 </body>
