Saving features, Import, favicons and more
* merge in other changes

* Several changes

- add "save all but active tab"
- add "save active tab" (from versx's fork)
- don't open a new background tab if there is already one open
- get favicons via the "chrome://favicon/" resource, instead of storing
  the URL
- add an "import" textarea, for importing lists from OneTab
- switch back to local storage, because sync storage is rather limited

TODO
- add a setting to allow users to use sync storage if they want

--- a/options.html
+++ b/options.html
@@ -38,6 +38,9 @@
 			<div id="saved" class="alert alert-success">Options saved</div>
 		</div>
 
+		<textarea id="import-text"></textarea>
+		<button id="import">Import</button>
+
 		<footer role="contentinfo">
 			<p><small>
 				<a href="/tabulator.html">Dashboard</a> &nbsp;&nbsp;&nbsp;
