--- a/popup.html
+++ b/popup.html
@@ -10,10 +10,16 @@
 	<div id="container">
 		<div id="menu" class="grid-container">
 			<div class="row">
-				<div id="save-all" class="menu-entry">Save tabs!</div>
+				<div id="save-all-but-active" class="menu-entry">Save all but active</div>
 			</div>
 			<div class="row">
-				<div id="open-background-page" class="menu-entry"><small>Dashboard</small></div>
+				<div id="save-all" class="menu-entry">Save open tabs</div>
+			</div>
+			<div class="row">
+				<div id="save-active" class="menu-entry">Save active tab</div>
+			</div>
+			<div class="row">
+				<div id="open-background-page" class="menu-entry">View saved tabs</div>
 			</div>
 		</div>
 	</div>
