visual feedback / success alert after importing

--- a/options.html
+++ b/options.html
@@ -40,7 +40,8 @@
 
 		<textarea id="import-text"></textarea>
 		<button id="import">Import</button>
-
+		<div id="imported" class="alert alert-success">Import successful</div>
+		
 		<footer role="contentinfo">
 			<p><small>
 				<a href="/tabulator.html">Dashboard</a> &nbsp;&nbsp;&nbsp;
