--- a/popup.html
+++ b/popup.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="assets/reset.min.css">
-	<link rel="stylesheet" href="popup.css">
-	<script src="assets/prefixfree.min.js"></script>
-</head>
-<body>
-	<div id="container">
-		<div id="menu" class="grid-container">
-			<div class="row">
-				<div id="save-all-but-active" class="menu-entry">Save all but active</div>
-			</div>
-			<div class="row">
-				<div id="save-all" class="menu-entry">Save open tabs</div>
-			</div>
-			<div class="row">
-				<div id="save-active" class="menu-entry">Save active tab</div>
-			</div>
-			<div class="row">
-				<div id="open-background-page" class="menu-entry">View saved tabs</div>
-			</div>
-		</div>
-	</div>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="assets/reset.min.css" />
+    <link rel="stylesheet" href="popup.css" />
+    <script src="assets/prefixfree.min.js"></script>
+  </head>
+  <body>
+    <div id="container">
+      <div id="menu" class="grid-container">
+        <div class="row">
+          <div id="save-all-but-active" class="menu-entry">
+            Save all but active
+          </div>
+        </div>
+        <div class="row">
+          <div id="save-all" class="menu-entry">Save open tabs</div>
+        </div>
+        <div class="row">
+          <div id="save-active" class="menu-entry">Save active tab</div>
+        </div>
+        <div class="row">
+          <div id="open-background-page" class="menu-entry">
+            View saved tabs
+          </div>
+        </div>
+      </div>
+    </div>
 
-	<script src="popup.js"></script>
-</body>
+    <script src="popup.js"></script>
+  </body>
 </html>
