Move code into src/ folder, fix URLs as well

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tabulator · Options</title>
-    <link rel="stylesheet" href="assets/reset.min.css" />
-    <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="/assets/reset.min.css" />
+    <link rel="stylesheet" href="/src/base.css" />
     <link rel="stylesheet" href="options.css" />
-    <script src="assets/prefixfree.min.js"></script>
-    <link rel="shortcut icon" href="images/icon16.png" />
+    <script src="/assets/prefixfree.min.js"></script>
+    <link rel="shortcut icon" href="/images/icon16.png" />
   </head>
   <body>
     <div id="container">
@@ -62,7 +62,7 @@
       <footer role="contentinfo">
         <p>
           <small>
-            <a href="/tabulator.html">Dashboard</a> &nbsp;&nbsp;&nbsp;
+            <a href="/src/tabulator/tabulator.html">Dashboard</a> &nbsp;&nbsp;&nbsp;
             <a
               href="https://github.com/greduan/chrome-ext-tabulator"
               target="_blank"
@@ -75,11 +75,11 @@
 
     <img
       class="logo-background"
-      src="images/icon128.png"
+      src="/images/icon128.png"
       alt="Tabulator icon"
     />
 
-    <script src="assets/jquery.min.js"></script>
+    <script src="/assets/jquery.min.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
