--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="assets/reset.min.css" />
+    <link rel="stylesheet" href="/assets/reset.min.css" />
     <link rel="stylesheet" href="popup.css" />
-    <script src="assets/prefixfree.min.js"></script>
+    <script src="/assets/prefixfree.min.js"></script>
   </head>
   <body>
     <div id="container">
