--- a/src/tabulator/tabulator.html
+++ b/src/tabulator/tabulator.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tabulator · Dashboard</title>
-    <link rel="stylesheet" href="assets/reset.min.css" />
-    <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="/assets/reset.min.css" />
+    <link rel="stylesheet" href="/src/base.css" />
     <link rel="stylesheet" href="tabulator.css" />
-    <script src="assets/prefixfree.min.js"></script>
+    <script src="/assets/prefixfree.min.js"></script>
     <script src="tabulator.js"></script>
-    <link rel="shortcut icon" href="images/icon16.png" />
+    <link rel="shortcut icon" href="/images/icon16.png" />
   </head>
   <body>
     <div id="container">
@@ -20,19 +20,19 @@
 
       <footer role="contentinfo">
         <p>
-          <small> <a href="/options.html">Options</a> </small>
+          <small> <a href="/src/options/options.html">Options</a> </small>
         </p>
       </footer>
     </div>
 
     <img
       class="logo-background"
-      src="images/icon128.png"
+      src="/images/icon128.png"
       alt="Tabulator icon"
     />
 
-    <script src="assets/mithril.min.js"></script>
-    <script src="assets/moment.min.js"></script>
+    <script src="/assets/mithril.min.js"></script>
+    <script src="/assets/moment.min.js"></script>
     <script src="tabulator-ui.js"></script>
   </body>
 </html>
