Remove top level IIFEs in JS files

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -62,7 +62,8 @@
       <footer role="contentinfo">
         <p>
           <small>
-            <a href="/src/tabulator/tabulator.html">Dashboard</a> &nbsp;&nbsp;&nbsp;
+            <a href="/src/tabulator/tabulator.html">Dashboard</a>
+            &nbsp;&nbsp;&nbsp;
             <a
               href="https://github.com/greduan/chrome-ext-tabulator"
               target="_blank"
