Add Webpack and use the bundled code

--- a/src/tabulator/tabulator.html
+++ b/src/tabulator/tabulator.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/base.css" />
     <link rel="stylesheet" href="tabulator.css" />
     <script src="/assets/prefixfree.min.js"></script>
-    <script src="tabulator.js"></script>
+    <script src="/dist/background.js"></script>
     <link rel="shortcut icon" href="/images/icon16.png" />
   </head>
   <body>
@@ -33,6 +33,6 @@
 
     <script src="/assets/mithril.min.js"></script>
     <script src="/assets/moment.min.js"></script>
-    <script src="tabulator-ui.js"></script>
+    <script src="/dist/background-ui.js"></script>
   </body>
 </html>
