--- a/src/options/options.html
+++ b/src/options/options.html
@@ -81,6 +81,6 @@
     />
 
     <script src="/assets/jquery.min.js"></script>
-    <script src="options.js"></script>
+    <script src="/dist/options.js"></script>
   </body>
 </html>
